# h2-groundstate-energy

./: .gitignore  README.md  pyproject.toml
submission/: perceval.ipynb  start_here.ipynb
